added cors and data.sql for UI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.datasource.url=jdbc:h2:mem:~/data/demo2
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization= true
